src/test/ui/const-generics/min_const_generics/generic-function-call-in-array-length.rs
#![feature(min_const_generics)]

const fn foo(n: usize) -> usize { n * 2 }

fn bar<const N: usize>() -> [u32; foo(N)] {
    //~^ ERROR generic parameters must not be used inside of non-trivial constant values
    [0; foo(N)]
    //~^ ERROR generic parameters must not be used inside of non-trivial constant values
}

fn main() {}
